--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </div>
     </main>
     <footer class="footer">
-      <p class="footer__text">© Pedro Nepomuceno.</p>
+      <p class="footer__text">© Pedro Nepomuceno CULLEN.</p>
     </footer>
     <script src="script.js"></script>
   </body>
