--- a/index.html
+++ b/index.html
@@ -131,26 +131,28 @@
         </div>
       </section>
       <div class="popup">
-        <button class="popup__close" type="button"></button>
-        <h3 class="popup__title">Edit Profile</h3>
-        <form class="popup__form" name="new">
-          <input
-            type="text"
-            placeholder="name"
-            class="popup__input popup__input_type_name"
-          />
-          <input
-            type="text"
-            placeholder="About me"
-            class="popup__input popup__input_type_description"
-          />
-          <button type="submit" class="popup__submit">Save</button>
-        </form>
+        <div class="popup__content">
+          <button class="popup__close" type="button"></button>
+          <h3 class="popup__title">Edit Profile</h3>
+          <form class="popup__form" name="new">
+            <input
+              type="text"
+              placeholder="name"
+              class="popup__input popup__input_type_name"
+            />
+            <input
+              type="text"
+              placeholder="About me"
+              class="popup__input popup__input_type_description"
+            />
+            <button type="submit" class="popup__submit">Save</button>
+          </form>
+        </div>
       </div>
     </main>
     <footer class="footer">
-      <p class="footer__text">© Pedro Nepomuceno CULLEN.</p>
+      <p class="footer__text">© Pedro Nepomuceno.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="./script/script.js"></script>
   </body>
 </html>
