--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             alt="yosemite"
           />
           <div class="elements__info">
-            <h3 class="elements__info-text">Yosemite Valley</h3>
+            <h2 class="elements__info-text">Yosemite Valley</h2>
             <button class="elements__info-button">
               <img src="./images/heart.svg" alt="like button" />
             </button>
@@ -58,7 +58,7 @@
             alt="Lake Louise"
           />
           <div class="elements__info">
-            <h3 class="elements__info-text">Lake Louise</h3>
+            <h2 class="elements__info-text">Lake Louise</h2>
             <button class="elements__info-button">
               <img src="./images/heart.svg" alt="like button" />
             </button>
@@ -71,7 +71,7 @@
             alt="Bald Mountains"
           />
           <div class="elements__info">
-            <h3 class="elements__info-text">Bald Mountains</h3>
+            <h2 class="elements__info-text">Bald Mountains</h2>
             <button class="elements__info-button">
               <img src="./images/heart.svg" alt="like button" />
             </button>
@@ -80,7 +80,7 @@
         <div class="elements__photo">
           <img class="elements__pic" src="./images/latemar.png" alt="Latemar" />
           <div class="elements__info">
-            <h3 class="elements__info-text">Latemar</h3>
+            <h2 class="elements__info-text">Latemar</h2>
             <button type="button" class="elements__info-button">
               <img src="./images/heart.svg" alt="like button" />
             </button>
@@ -89,13 +89,9 @@
         <div class="elements__photo">
           <img src="./images/vanoise.png" alt="Vanoise Nationa..." />
           <div class="elements__info">
-            <h3 class="elements__info-text">Vanoise Nationa...</h3>
+            <h2 class="elements__info-text">Vanoise Nationa...</h2>
             <button type="button" class="elements__info-button">
-              <img
-                class="elements__pic"
-                src="./images/heart.svg"
-                alt="like button"
-              />
+              <img src="./images/heart.svg" alt="like button" />
             </button>
           </div>
         </div>
@@ -106,7 +102,7 @@
             alt="Lago di Braies"
           />
           <div class="elements__info">
-            <h3 class="elements__info-text">Lago di Braies</h3>
+            <h2 class="elements__info-text">Lago di Braies</h2>
             <button class="elements__info-button">
               <img src="./images/heart.svg" alt="like button" />
             </button>
