feat: like button

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <button type="reset" class="elements__delete"></button>
           <div class="elements__info">
             <h2 class="elements__info-text">Yosemite Valley</h2>
-            <button class="elements__info-button"></button>
+            <button type="button" class="elements__info-button"></button>
           </div>
         </div>
         <div class="elements__photo">
@@ -59,7 +59,7 @@
           <button type="reset" class="elements__delete"></button>
           <div class="elements__info">
             <h2 class="elements__info-text">Lake Louise</h2>
-            <button class="elements__info-button"></button>
+            <button type="button" class="elements__info-button"></button>
           </div>
         </div>
         <div class="elements__photo">
@@ -71,7 +71,7 @@
           <button type="reset" class="elements__delete"></button>
           <div class="elements__info">
             <h2 class="elements__info-text">Bald Mountains</h2>
-            <button class="elements__info-button"></button>
+            <button type="button" class="elements__info-button"></button>
           </div>
         </div>
         <div class="elements__photo">
@@ -99,7 +99,7 @@
           <button type="reset" class="elements__delete"></button>
           <div class="elements__info">
             <h2 class="elements__info-text">Lago di Braies</h2>
-            <button class="elements__info-button"></button>
+            <button type="button" class="elements__info-button"></button>
           </div>
         </div>
       </section>
