--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <footer class="footer">
       <p class="footer__text">© Pedro Nepomuceno.</p>
     </footer>
-    <div class="popup" id="edit-popup">
+    <div class="popup popup__type-edit_profile" id="edit-popup">
       <div class="popup__content">
         <button class="popup__close" type="button"></button>
         <h3 class="popup__title">Edit Profile</h3>
