--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="popup__content">
         <button class="popup__close" type="button"></button>
         <h3 class="popup__title">Edit Profile</h3>
-        <form class="popup__form" name="edit profile">
+        <form class="popup__form" name="edit profile" novalidate>
           <input
             name="name"
             type="text"
@@ -83,23 +83,28 @@
         <form class="popup__form" name="add place" novalidate>
           <input
             name="Title"
-            id="title-input"
+            id="title"
             type="text"
             placeholder="Title"
             class="popup__input"
             id="title"
+            required
+            minlength="3"
+            maxlength="30"
           />
           <span class="popup__input_type_error" id="title-error"></span>
 
           <input
             name="URL"
-            id="url-input"
-            type="text"
-            placeholder="URL"
+            id="url"
+            type="url"
+            placeholder="Link"
             class="popup__input"
             id="photo"
+            required
+            minlength="6"
           />
-          <span class="popup__input_type_error" id="photo-error"></span>
+          <span class="popup__input_type_error" id="url-error"></span>
 
           <button type="submit" class="popup__submit">Create</button>
         </form>
