--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           />
           <span class="popup__input_type_error" id="description-error"></span>
 
-          <button type="submit" class="popup__submit">Save</button>
+          <button type="submit" class="popup__submit" disabled>Save</button>
         </form>
       </div>
     </div>
@@ -106,7 +106,7 @@
           />
           <span class="popup__input_type_error" id="url-error"></span>
 
-          <button type="submit" class="popup__submit">Create</button>
+          <button type="submit" class="popup__submit" disabled>Create</button>
         </form>
       </div>
     </div>
