--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             minlength="2"
             maxlength="40"
           />
-          <span class="popup__input_type_error" id="name-error"></span>
+          <span class="popup__error" id="name-error"></span>
           <input
             name="description"
             type="text"
@@ -70,7 +70,7 @@
             minlength="2"
             maxlength="200"
           />
-          <span class="popup__input_type_error" id="description-error"></span>
+          <span class="popup__error" id="description-error"></span>
 
           <button type="submit" class="popup__submit" disabled>Save</button>
         </form>
@@ -91,7 +91,7 @@
             minlength="3"
             maxlength="30"
           />
-          <span class="popup__input_type_error" id="title-error"></span>
+          <span class="popup__error" id="title-error"></span>
 
           <input
             name="URL"
@@ -102,7 +102,7 @@
             required
             minlength="6"
           />
-          <span class="popup__input_type_error" id="url-error"></span>
+          <span class="popup__error" id="url-error"></span>
 
           <button type="submit" class="popup__submit" disabled>Create</button>
         </form>
