--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				</div>
 			</div>
 		</template>
-		<script src="./script/script.js"></script>
+		<script src="./script/script.js" type="module"></script>
 		<script src="./script/validate.js"></script>
 	</body>
 </html>
