--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 			</div>
 		</template>
 		<script src="./script/script.js" type="module"></script>
-		<script src="./script/validate.js"></script>
+		<script src="./script/utils.js" type="module"></script>
+		<script src="./script/formValidator.js" type="module"></script>
 	</body>
 </html>
