--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
 			<div class="popup__content">
 				<button class="popup__close" type="button"></button>
 				<h3 class="popup__title">Edit Profile</h3>
-				<form class="popup__form" name="edit profile" novalidate>
+				<form
+					id="profile-form"
+					class="popup__form"
+					name="edit profile"
+					novalidate
+				>
 					<input
 						name="name"
 						type="text"
@@ -80,7 +85,7 @@
 			<div class="popup__content">
 				<button class="popup__close" type="button"></button>
 				<h3 class="popup__title">New Place</h3>
-				<form class="popup__form" name="add place" novalidate>
+				<form id="add-form" class="popup__form" name="add place" novalidate>
 					<input
 						name="Title"
 						id="title"
