--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
 				<h3 class="popup__title">New Place</h3>
 				<form id="add-form" class="popup__form" name="add place" novalidate>
 					<input
-						name="Title"
+						name="name"
 						id="title"
 						type="text"
 						placeholder="Title"
@@ -99,7 +99,7 @@
 					<span class="popup__error" id="title-error"></span>
 
 					<input
-						name="URL"
+						name="link"
 						id="url"
 						type="url"
 						placeholder="Link"
