--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,7 @@
 		<main>
 			<section class="profile">
 				<div class="profile__avatar">
-					<img
-						class="profile__avatar-pic"
-						src="<%=require('./images/avatar.jpg')%>"
-						alt="profile picture"
-					/>
+					<img class="profile__avatar-pic" src="" alt="profile picture" />
 
 					<div class="profile__info">
 						<h1 class="profile__name">Pedro Nepomuceno</h1>
