popup delete card

--- a/src/index.html
+++ b/src/index.html
@@ -118,6 +118,16 @@
 				<p class="popup__caption"></p>
 			</div>
 		</div>
+		<div class="popup" id="delete-popup">
+			<div class="popup__content popup__content_type_delete">
+				<button class="popup__close" type="button"></button>
+				<h3 class="popup__title">Are you sure?</h3>
+
+				<button type="submit" class="popup__submit popup__submit_type_delete">
+					Yes
+				</button>
+			</div>
+		</div>
 		<template id="elements-template">
 			<div class="elements__photo">
 				<img class="elements__pic" src=" " alt=" " />
