api delete card

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 					/>
 					<span class="popup__error" id="name-error"></span>
 					<input
-						name="description"
+						name="about"
 						type="text"
 						placeholder="About me"
 						class="popup__input popup__input_type_description"
@@ -134,7 +134,10 @@
 				<button type="reset" class="elements__delete"></button>
 				<div class="elements__info">
 					<h2 class="elements__info-text"></h2>
-					<button type="button" class="elements__info-button"></button>
+					<div class="elements__like">
+						<button type="button" class="elements__info-button"></button>
+						<p class="elements__counter">0</p>
+					</div>
 				</div>
 			</div>
 		</template>
