api like feature

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
 			<section class="profile">
 				<div class="profile__avatar">
 					<img class="profile__avatar-pic" src="" alt="profile picture" />
-
+					<div class="profile__overlay">
+						<button type="button" class="profile__change-photo"></button>
+					</div>
 					<div class="profile__info">
 						<h1 class="profile__name">Pedro Nepomuceno</h1>
 						<p class="profile__text">Explorer</p>
